# multi_hs_seq

./: README.md
GAG/: CMakeLists.txt
GAG/config/: SampleParameterFile.xml  commongroup.xml  fragmentation.xml  modification.xml  monosaccharide.xml  systemparameters.xml
GAG/data/spectrum/: Boons#03_3_NETD.txt  Boons#03_4_NETD.txt  Boons#23_2_NETD.txt  Boons#23_3_NETD.txt  Boons#38_4_NETD.txt  P71_3_NETD.txt  P82_6_NETD.txt  dp15_6_NETD.txt  dp15_7_NETD.txt  hex6_4_NETD.txt  hex7_4_NETD.txt
GAG/data/structure/: 15mer.cdx  Arixtra, Native 4-.gwp  Boons#03.gl  Boons#23.gl  Boons#23.gws  Boons23.cdx  Boons23.gwp  Boons38.cdx  Boons38.gwp  H1 SR90107b, hy of H3=Arixtra.cdx  JL P6.8.gwp  JL P7.1 no tag.gwp  JL P7.1.gwp  JL P8.2.gwp  arixtra.gl  boons03.gwp  dp15.gl  dp15.gwp  hex6.gl  hex6_hh.cdx  hex7.gl  jl_p7_1.gl  jl_p8_2.gl  p71.cdx  pnp.cdx
GAG/doc/: unit_test.xlsx
GAG/src/GAGPL/CHEMISTRY/: CMakeLists_debris.txt  Composition.cpp  Composition.h  Element.cpp  Element.h  FunctionalGroup.cpp  FunctionalGroup.h  FunctionalGroupTable.cpp  FunctionalGroupTable.h  Modification.cpp  Modification.h  ModificationTable.cpp  ModificationTable.h  Modifier.cpp  Modifier.h  PeriodicTable.cpp  PeriodicTable.h  Unit.h
GAG/src/GAGPL/FRAGMENTATION/: Fragmentation.cpp  Fragmentation.h  Fragmentation.h~  FragmentationParams.cpp  FragmentationParams.h  FragmentationTable.cpp  FragmentationTable.h
GAG/src/GAGPL/GAGLIBRARY/: Assignment.cpp  Assignment.h  AssignmentPool.cpp  AssignmentPool.h  Backbone.cpp  Backbone.h  CleavageTree.cpp  CleavageTree.h  FullMap.cpp  FullMap.h  GeneralCleavage.cpp  GeneralCleavage.h  HHSequencing.cpp  LibraryForest.cpp  LibraryForest.h  LibraryMatching.cpp  LibraryMatching.h  LibraryTree.cpp  LibraryTree.h  MethodsComparison.cpp  NaiveMethods.cpp  NaiveMethods.h  SequencePrediction.cpp  SequencePrediction.h  SequenceSpace.cpp  SequenceSpace.h
GAG/src/GAGPL/GLYCAN/: Branch.cpp  Branch.h  GlycanComposition.cpp  GlycanComposition.h  GlycanSequence.cpp  GlycanSequence.h  GlycanSequenceFactory.h  InternalSite.cpp  InternalSite.h  Linkage.h  Monosaccharide.cpp  Monosaccharide.h  MonosaccharideUnitTable.cpp  MonosaccharideUnitTable.h
GAG/src/GAGPL/GUI/: gag_pipe.fbp  mainframe.cpp  mainframe.h
GAG/src/GAGPL/IO/: SequenceReader.cpp  SequenceReader.h
GAG/src/GAGPL/MATH/: Calculation.h  Combination.h  MassConversion.cpp  MassConversion.h  NewtonGirardFormulae.cpp  NewtonGirardFormulae.cpp~  NewtonGirardFormulae.h  NewtonGirardFormulae.h~  Polynomials.h  VietesFormulae.cpp  VietesFormulae.h
GAG/src/GAGPL/MISC/: ConfigLoader.h  Param.cpp  Param.h
GAG/src/GAGPL/SEQUENCING/: AssignmentPool.cpp  AssignmentPool.h  DivMap.cpp  DivMap.h  Division.cpp  Division.h  DivisionCluster.cpp  DivisionCluster.h
GAG/src/GAGPL/SPECTRUM/: AverageFormulae.cpp  AverageFormulae.cpp~  AverageFormulae.h  AverageFormulae.h~  CandidateEnvelop.cpp  CandidateEnvelop.h  Envelop.cpp  Envelop.h  EnvelopFinder.cpp  EnvelopFinder.cpp.bak  EnvelopFinder.cpp~  EnvelopFinder.h  EnvelopFinder.h.bak  EnvelopFinder.h~  EnvelopReference.cpp  EnvelopReference.h  InternalCalibration.h  IsotopicConstants.cpp  IsotopicConstants.h  IsotopicDistribution.cpp  IsotopicDistribution.h  MonoPeak.h  Peak.cpp  Peak.h  PeakList.cpp  PeakList.h  PseudoclusterFinder.cpp  PseudoclusterFinder.cpp~  PseudoclusterFinder.h  PseudoclusterFinder.h~  PseudoclusterFinderHelper.cpp  PseudoclusterFinderHelper.h  PseudoclusterFinderHelper.h~  PseudoclusterFinderTest.cpp~  RichPeak.cpp  RichPeak.h  SimpleFinder.cpp  SimpleFinder.h  Spectrum.h  Spectrum.h~
GAG/test/: BranchTest.cpp  CMakeLists.txt  CandidateEnvelopTest.cpp  CombinationTest.cpp  CompositionTest.cpp  DivMapTest.cpp  EnvelopFinderTest.cpp  FragmentationTest.cpp  FullMapTest.cpp  FunctionalGroupTest.cpp  GlycanSequenceTest.cpp  IsotopicDistributionTest.cpp  LibraryForestTest.cpp  LibraryTreeTest.cpp  ModificationTest.cpp  ModifierTest.cpp  MonosaccharideTableTest.cpp  NaiveMethodsTest.cpp  NewtonGirardFormulaeTest.cpp  ParamTest.cpp  PeakListTest.cpp  PeriodicTableTest.cpp  PseudoclusterFinderTest.cpp  SequencePredictionTest.cpp  SequenceReaderTest.cpp  SequenceSpaceTest.cpp  SimpleFinderTest.cpp  VietesFormulaeTest.cpp  binsearch.cpp
